Fix #1464: DocumentViewer code cleanup